<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navigation1"
            android:checked="false"
            android:icon="@drawable/ic_format_quote_black_24dp"
            android:title="@string/navigation_view_item_1" />
        <item
            android:id="@+id/navigation2"
            android:checked="false"
            android:icon="@drawable/ic_mod_black_24dp"
            android:title="@string/navigation_view_item_2" />
        <item
            android:id="@+id/navigation3"
            android:checked="false"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/navigation_view_item_3" />


            <item
                android:id="@+id/navigation4"
                android:checked="false"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/navigation_view_item_4" />
            <item
                android:id="@+id/navigation5"
                android:checked="false"
                android:icon="@drawable/ic_more_black_24dp"
                android:title="@string/navigation_view_item_5" />
        <item
            android:id="@+id/navigation6"
            android:checked="false"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/navigation_view_item_6" />
    </group>
  </menu>